# p4sser8y.github.io

./: .gitignore  .gitmodules  .prettierrc.json  2001-功夫.json  404.html  CNAME  README.md  config.toml  index.html  index.xml  package-lock.json  package.json  robots.txt  sitemap.xml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs
.github/workflows/: Hugo.yml  page.yml
HowTimeFlies/: .env.template  package.json  quasar.config.js
HowTimeFlies/src/: App.vue
assets/: CalendarWall-1y82yF-6.js  CardLayout-5LLN6dBt.css  CardLayout-nDCPeYcS.js  ErrorNotFound-DSEXIuOA.js  MovieLayout-nQ9u4LOB.js  PosterWall-JQVoAge3.js  QLayout-BlmlEDj8.css  QLayout-C4F_jVLr.js  RedirectToHome-KFSR-w3s.js  TimelineWall-qwPrbxaO.js  _plugin-vue_export-helper-Dxsx2kFr.js  coop-BOfVvInw.js  coop-DS1Gy_Tx.css  main-Dyf1RVDH.css  main-hf3-xUaI.js  raven-ByXgOShA.js  stream-C95KN8-X.css  stream-gtyDiXRs.js
assets/gm/: stream_formatter_douban.user.js
backend.flask/: pyproject.toml
backend.flask/backend/: __init__.py  __main__.py  app.py  crud.py  env.py  exceptions.py
backend.flask/data/watch/passerby/: records.yml
backend.py/: LICENSE  pyproject.toml
backend.py/server/: crud.py
categories/: index.html  index.xml
categories/main/: index.html  index.xml
content/posts/: 20190114-hello-world.md
coop/: index.html
css/: main.min.css
data/: database.db
data/statics/: pgp.asc
data/stream/: 2001-功夫.md  2001-功夫.yml  2001-少林足球.md  2001-少林足球.yml  (+41 more)
frontend/: .eslintignore  package.json  quasar.config.js
gate/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
main/: .prettierrc.json  App.vue  ConveyGameOfLife.vue  index.html  morse.ts  package.json  tailwind.config.js  tsconfig.json  vite.config.js
netlify-cms/: config.yml  index.html
os/: .env.template  Cargo.toml
posts/: index.html  index.xml
raven/: index.html
scripts/: build.sh  deploy.sh  deploy2netlify.sh  deploy_to_netlify.sh  install.sh  update.mjs
server/: crud.py  models.py
stream/: .env.template  README.md  index.html  main.js  package.json  quasar.config.js
stream/scripts/: .gitignore  pyproject.toml  update.mjs  upload_poster.py  zLogging.py
tags/: index.html  index.xml
waiter/: .env.template  Cargo.toml
waiter/src/: how_time_flies.rs  main.rs
(+111 files in other folders)
