[tool.poetry]
name = "HowTimeFiles"
version = "0.1.0"
description = ""
authors = ["P4SSER8Y <P4SSER8Y@outlook.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple"
default = true
secondary = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
peewee = "^3.15.4"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
indent_width = 4
align_closing_bracket_with_visual_indent = true
column_limit = 233