[package]
    name = "waiter"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rocket = { version = "0.5.0-rc.2", features = ["json"] }
    redis = "*"
    once_cell = "*"
    log = "*"
    anyhow = "*"
    serde = "*"
    serde_json = "*"
    regex = "1"
    dotenv = "0.15.0"
