[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["P4SSER8Y <P4SSER8Y@outlook.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
PyYAML = "^6.0"
rich = "^13.3.3"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length=128
